examples/test/testpolicy1692.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1692
  namespace: namespace396
spec:
  podSelector:
    matchLabels:
      key28: value46
      key46: value9
      key6: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value44
      podSelector:
        matchLabels:
          key15: value26
          key20: value32
          key38: value29
